# mixture-density-networks

./: README.md  fixing_pyrep_error  main.py  pyproject.toml  task_test.py  test.py  train.py
config/: mdn.yaml  mlp.yaml
coppeliasim_task_files/: empty_task.py  empty_task.ttm
data/: create_dataset.py  dataloader.py
models/: mdn.py  mlp.py
rlbench_kinematics_dataset/train/CloseBox/: metadata.json  trial_000_cartesian.npy  trial_002_cartesian.npy  trial_002_joint_angles.npy  trial_004_cartesian.npy  trial_004_joint_angles.npy  trial_006_cartesian.npy  trial_007_cartesian.npy  trial_008_cartesian.npy  trial_009_cartesian.npy  trial_010_joint_angles.npy  trial_011_joint_angles.npy  trial_012_cartesian.npy  trial_012_joint_angles.npy  trial_013_cartesian.npy  trial_015_cartesian.npy  trial_016_cartesian.npy  trial_017_joint_angles.npy  trial_018_cartesian.npy  trial_018_joint_angles.npy  trial_019_cartesian.npy  trial_020_cartesian.npy  trial_022_cartesian.npy  trial_023_cartesian.npy  trial_024_cartesian.npy  trial_024_joint_angles.npy  trial_025_cartesian.npy  trial_025_joint_angles.npy  trial_026_joint_angles.npy  trial_027_cartesian.npy  trial_027_joint_angles.npy  trial_028_joint_angles.npy  trial_029_cartesian.npy  trial_032_cartesian.npy  trial_032_joint_angles.npy  trial_033_joint_angles.npy  trial_034_cartesian.npy  trial_036_joint_angles.npy  trial_038_joint_angles.npy  trial_039_joint_angles.npy  (+9 more)
rlbench_kinematics_dataset/train/CloseFridge/: metadata.json  trial_000_cartesian.npy  trial_001_cartesian.npy  trial_002_cartesian.npy  trial_002_joint_angles.npy  (+49 more)
(+1312 files in other folders)
